@startuml

title 06. Purchases and receiving

hide circle
skinparam linetype ortho

enum PurchaseStatus {
	draft
	ordered
	partially_received
	received
	completed
	canceled
	partially_returned
	returned
}

entity Purchase {
	* id: int
	--
	* number: string(255)
	* status: PurchaseStatus
	* currency: Currency
	* exchangeRateToBase: decimal(18,8)
	supplierNameSnapshot: string(255)?
	supplierPhoneSnapshot: string(255)?
	supplierEmailSnapshot: string(255)?
	invoiceNumber: string(255)?
	documentDate: DateTimeImmutable?
	comment: text?
	* totalAmount: decimal(14,4)
	* totalAmountBase: decimal(14,4)
	deliveryCost: decimal(14,4)?
	deliveryCostBase: decimal(14,4)?
	canceledAt: DateTimeImmutable?
	* paidAmountBase: decimal(14,4)
	* paymentStatus: PaymentStatusEnum
	paidAt: DateTimeImmutable?
	* createdAt: DateTimeImmutable
	* updatedAt: DateTimeImmutable
	* store: Store
	supplier: Supplier?
	createdBy: User?
	updatedBy: User?
	canceledBy: User?
}

entity PurchaseEntry {
	* id: int
	--
	* quantity: decimal(14,4)
	receivedQuantity: decimal(14,4)?
	returnedQuantity: decimal(14,4)?
	* unitCost: decimal(14,4)
	* unitCostBase: decimal(14,4)
	deliveryCost: decimal(14,4)?
	deliveryCostBase: decimal(14,4)?
	* totalCost: decimal(14,4)
	* totalCostBase: decimal(14,4)
	salePrice: decimal(14,4)?
	salePriceBase: decimal(14,4)?
	* productNameSnapshot: string(255)
	* productCodeSnapshot: string(255)
	* unitCodeSnapshot: string(50)
	* unitNameSnapshot: string(255)
	* purchase: Purchase
	* product: Product
	* warehouse: Warehouse
}

Supplier |o--o{ Purchase : supplies
Purchase ||--o{ PurchaseEntry : has
Product ||--o{ PurchaseEntry : purchased as
Warehouse ||--o{ PurchaseEntry : received into
PurchaseEntry |o--o{ WarehouseStockBatch : may create batches
Currency ||--o{ Purchase : purchase currency
PaymentStatusEnum ||--o{ Purchase : payment state
Purchase ||--o{ InventoryDocument : generates receipt/return docs
User |o--o{ Purchase : creates/updates/cancels

note right of Purchase
  Current project status:
  - Purchase and PurchaseEntry entities are implemented.
  - Supplier entity/relation and supplier snapshot copying exist.
  - PurchaseStatus and payment snapshot fields exist.
  - paidAt is maintained as a payment cache once Payments stage exists.
  - Admin Purchase CRUD/workflow is implemented.

  Required behavior:
  - Purchase number is generated per store.
  - Currency/exchangeRateToBase are financial snapshots.
  - Supplier snapshot fields remain stable after supplier edits.
  - Totals and base totals are calculated from entries.
  - Delivery cost allocation strategy must be explicit:
    by quantity, by value, manual distribution, or another rule.
  - Status transitions are controlled by services.
end note

note right of PurchaseStatus
  Recommended flow:
  draft -> ordered -> partially_received/received -> completed.

  Meaning:
  - ordered = purchase committed to supplier.
  - partially_received/received are driven by posted receipt docs.
  - completed = purchasing work is fully closed.
  - canceled stops a purchase before completion.
  - partially_returned/returned describe goods sent back to supplier.
end note

note right of PurchaseEntry
  Required behavior:
  - Product name/code/unit are snapshots.
  - unitCostBase uses exchangeRateToBase snapshot.
  - receivedQuantity and returnedQuantity are progress caches.
  - posted InventoryDocumentLine + StockMovement are the source of truth.
  - Receiving creates InventoryDocument and StockMovement,
    not manual WarehouseStock edits in controllers.
end note

note bottom
  Suggested implementation steps:

  1. Add PurchaseManager and Purchase CRUD with entry collection.
  2. Decide and implement delivery cost distribution.
  3. Add transition service:
     draft -> ordered -> receipt-driven statuses.
  4. Add receiving/return integration after InventoryDocuments
     and 08.1 progress synchronization stages.
  5. Add payment recalculation after Payments stage.
  6. Add tests for:
     totals, supplier snapshots, cost conversion,
     delivery allocation and status transitions.
end note

@enduml
